--- a/CodeChef.cbp
+++ b/CodeChef.cbp
@@ -37,7 +37,13 @@
 		<Unit filename="functions.c">
 			<Option compilerVar="CC" />
 		</Unit>
+		<Unit filename="hs08test.c">
+			<Option compilerVar="CC" />
+		</Unit>
 		<Unit filename="main.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="test.c">
 			<Option compilerVar="CC" />
 		</Unit>
 		<Extensions>
